# DiceAutoApply

./: .env.example  .gitignore  DiceAutoApply.spec  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: icon.icns
config/: settings.yaml
scripts/: generate_icons.py  verify_headless.py
src/: dice_automation.py  main.py
src/scheduler/: builtin.py  os_scheduler.py
src/ui/: app.py
src/ui/components/: sidebar.py  widgets.py
src/ui/pages/: dashboard.py  logs.py  schedule.py  settings.py  setup.py
src/utils/: credentials.py
