[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diceautoapply"
version = "1.0.0"
description = "Automated job application tool for Dice.com"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DiceAutoApply"}
]
keywords = ["dice", "job-application", "automation", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "flet==0.21.2",
    "schedule>=1.2.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
diceautoapply = "src.main:main"

[project.gui-scripts]
diceautoapply-gui = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/diceautoapply"
Repository = "https://github.com/yourusername/diceautoapply"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
